remove unused method
